fixed responsive header text on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -46,16 +46,14 @@ NAV
 /////////////////////////////////////////////
 */
 .navbar {
-    background: rgba(0, 0, 0, 0.4) !important;
-    font-size: 162.5%;
+    background: #cc254f;
+    width: 100%;
+    height: 4.6rem;
+    color: #f4f2f2;
 }
 
-.navbar-light .navbar-nav .nav-link {
-    color: rgba(255, 255, 255, .8);
-}
+.nav-container {
 
-.navbar-light .navbar-nav .nav-link:hover {
-    background: white;
 }
 
 /*
@@ -72,13 +70,12 @@ LANDING
 
     background-size: cover;
     background-position: top;
-    position: relative;
-    animation: imageAnimation 1s linear;
+    position: relative;  
     
     
 
     .landing__header {
-        width: 85%;
+        width: 90%;
         /*color: var(--color-grey-light-2);*/
         color: #f4f2f2;
         position: absolute;
@@ -87,6 +84,11 @@ LANDING
         transform: translate(-50%, -50%);
         text-align: center;
         letter-spacing: 1px;
+
+
+            @media only screen and (max-width: 900px) {
+                width: 95%;
+            }
         
 
         .landing__header-text {
@@ -99,33 +101,47 @@ LANDING
 
             @media only screen and (max-width: 1200px) {
                 font-size: 4rem;
+            }            
+
+            @media only screen and (max-width: 900px) {
+                font-size: 3rem;
             }
 
+
             @media only screen and (max-width: 600px) {
-                font-size: 2.5rem;
+                font-size: 2rem;
+            }            
+
+            @media only screen and (max-width: 500px) {
+                font-size: 2rem;
             }
         }
 
         .landing__header-subtext {
-            /*font-size: 3rem;*/
             font-size: 4rem;
             margin-bottom: .5rem;
             text-shadow: 0px 4px 3px rgba(0,0,0,.5),
                         0px 6px 11px rgba(0,0,0,.7);
             
-            animation: moveInRight 1.5s ease-out;
 
             @media only screen and (max-width: 1200px) {
                 font-size: 3rem;
             }
 
             @media only screen and (max-width: 900px) {
-                margin-bottom: 0;
+                /*margin-bottom: 0;*/
+                font-size: 2rem;
             }
 
             @media only screen and (max-width: 600px) {
                 font-size: 1.75rem;
+            }  
+
+            @media only screen and (max-width: 500px) {
+                font-size: 1.5rem;
             }
+
+
         }
 
 
@@ -166,14 +182,6 @@ LANDING
                 @media only screen and (max-width: 600px) {
                     font-size: 1.8rem;
                 }
-            }
-
-            .landing__header__icon-box-item:hover {
-                text-shadow: 0 0 20px var(--color-primary),
-                            0 0 20px var(--color-primary),
-                            0 0 20px var(--color-primary),
-                            0 0 20px var(--color-primary),
-                            0 0 20px var(--color-primary);
             }
         }
     }
